[package]
name = "crispr"
version = "0.2.1"
authors = ["Yoav Lavi <yoavlavi122@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
difference = "2.0"
colored = "1.6"
ignore = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5.8"