[package]
name = "crispr"
version = "0.4.0"
authors = ["Yoav Lavi <yoavlavi122@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.7"
difference = "2.0.0"
colored = "2.0.0"
ignore = "0.4.18"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
toml = "0.5.8"
